--- a/agency-default.html
+++ b/agency-default.html
@@ -15,7 +15,7 @@
   <!-- CSS-->
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Centrix | Agency Default</title>
+  <title>Clody Studio</title>
 </head>
 
 <body class="webpage">
