--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- CSS-->
   <link rel="stylesheet" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="css/main.css">
-  <title>Centrix | Agency Modern</title>
+  <title>Clody Studio</title>
 </head>
 
 <body class="webpage webpage--bg-white">
