--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
           </div>
         </div>
       </section>
-      <section class="about-video-section about-video-section--pb-0">
+      <!-- <section class="about-video-section about-video-section--pb-0">
         <div class="about-video-section__container container container--size-large">
           <div class="row">
             <div class="about-video-section__main col-12 col-md">
@@ -634,7 +634,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="team-section team-section--pb-0">
         <div class="team-section__container container container--size-large">
           <h2 class="team-section__title" data-aos="fade-up">Our magic team</h2>
